--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .Contact__container {
-  background-color: black;
+  background-color: rgb(0, 30, 69);
   color: white;
   display: flex;
   align-items:flex-start;
@@ -20,7 +20,7 @@ b{
 }
 .Contact__icon{
   margin: 5px;
-  color: aqua;
+  color: var(--thirdColor);
 }
 .Conatct__support{
   margin: 10px 0;
