--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 .home__container{
     
     display: flex;
@@ -8,8 +8,8 @@
     flex-direction: column;
     height: 100vh;
     padding: 0 10vw;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6),
-                       rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 1)), url("../../Images/Bike-bg2.jpeg");
+    background-image: linear-gradient(rgba(0, 30, 69, 0.6),
+                       rgba(0, 30, 69, 0.6),rgba(0, 30, 69, 0.7),rgba(0, 30, 69, 1)), url("../../Images/Bike-bg2.jpeg");
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -18,7 +18,7 @@
     margin: 0;
 }
 .home__heading__welcome{
-    color: rgb(89, 219, 255);
+    color: var(--thirdColor);
 }
 .home__heading__name{
     margin: 10px auto;
@@ -30,14 +30,15 @@
 .home__para{
     font-size: 1.6rem;
     font-weight: 600;
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'Playfair Display', serif;
     margin: 10px auto;
+    letter-spacing: 0.1rem;
 }
 
 @media screen and (min-width: 900px) {
   .home__container{
     
-   background-image: linear-gradient(rgba(0, 0, 0, 0.5),
-                       rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 1)), url("../../Images/Bike-bg.jpg");
+   background-image: linear-gradient(rgba(0, 30, 69, 0.3),
+                       rgba(0, 30, 69, 0.4),rgba(0, 30, 69, 0.7),rgba(0, 30, 69, 1)), url("../../Images/Bike-bg.jpg");
 }
 }
