--- a/src/Components/HotDeals/HotDeals.css
+++ b/src/Components/HotDeals/HotDeals.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
 .deals__container{
     color: white;
-    background-image: linear-gradient( rgb(0, 0, 0),
-                       rgb(88, 88, 88),rgb(88, 88, 88),rgb(0, 0, 0));
+    background-image: linear-gradient( rgb(0, 30, 69),
+                       rgb(88, 88, 88),rgb(88, 88, 88),rgb(0, 30, 69));
 }
 .deals__heading{
     font-family: 'Oswald', sans-serif;
@@ -15,11 +15,11 @@
     font-size: 2.8rem;
 }
 .deals__heading__first{
-    color: rgb(89, 219, 255);
+    color: var(--thirdColor);
     margin-right: 10px;
 }
 
 .deals__heading__second{
-    border-bottom: 6px solid rgb(89, 219, 255);
+    border-bottom: 6px solid var(--thirdColor);
 }
 
