--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -19,9 +19,9 @@
   /* color: rgb(7, 7, 7) ; */
   /* color: rgb(3, 200, 255) ; */
   color: white;
-  background-color: black;
+  background-color: rgb(0, 21, 47);
   font-size: 1.9rem ;
-  border: 2px solid black;
+  border: 2px solid rgb(0, 21, 49);
   /* border: 3px solid white; */
   border-radius: 50px;
   padding: 5px ;
@@ -31,13 +31,13 @@
 }
 .navBar__icon:hover {
   background-color: rgb(29, 29, 29);
-  border: 2px solid rgb(89, 219, 255);
-  color: rgb(89, 219, 255) ;
+  border: 2px solid var(--thirdColor);
+  color: var(--thirdColor) ;
 }
 a.active{
    background-color: rgb(29, 29, 29);
-  border: 2px solid rgb(89, 219, 255);
-  color: rgb(89, 219, 255) ;
+  border: 2px solid var(--thirdColor);
+  color: var(--thirdColor) ;
 }
 @media screen and (min-width: 990px) {
   .navBar__container {
