--- a/src/Components/Product-card/ProductCard.css
+++ b/src/Components/Product-card/ProductCard.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items:center;
     justify-content:center;
-    background-color: rgb(35, 35, 35);
+    background-color: var(--cardBg);
     margin: 20px auto;
     width: clamp(200px,300px,400px);
     border: 2px solid rgb(35, 35, 35);
@@ -14,7 +14,7 @@
     border-bottom-right-radius: 50%; */
 }
 .ProductCard__container:hover{
-    border: 2px solid rgb(89, 219, 255);
+    border: 2px solid var(--thirdColor);
     box-shadow: 10px 5px 10px 10px rgba(0, 48, 65, 0.5);
     transform:translateY(-20px);
 }
@@ -28,7 +28,7 @@ flex-wrap: wrap;
 border-radius:50px ;
 }
 .ProductCard__imageContainer:hover{
-    border: 2px solid rgb(89, 219, 255);
+    border: 2px solid var(--thirdColor);
 }
 .ProductCard__image{
     width: clamp(200px,300px,400px);
