--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -30,20 +30,20 @@
   font-size: 2.8rem;
 }
 .services__heading__first {
-  color: rgb(89, 219, 255);
+  color: var(--thirdColor);
 }
 
 .services__heading__second {
-  border-bottom: 6px solid rgb(89, 219, 255);
+  border-bottom: 6px solid var(--thirdColor);
 }
 @media screen and (min-width: 900px) {
   .services__container {
   /* background-color: black; */
   background-image: linear-gradient(
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 1)
+      rgba(0, 30, 69, 1),
+      rgba(0, 30, 69, 0.7),
+      rgba(0, 30, 69, 0.7),
+      rgba(0, 30, 69, 1)
     ),
     url("../../Images/Bike-bg4.jpeg");
 }
