--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,12 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
 .services__container {
   /* background-color: black; */
-  background-image: linear-gradient(
-      rgba(0, 30, 69, 1),
-      rgba(0, 30, 69, 0.7),
-      rgba(0, 30, 69, 0.7),
-      rgba(0, 30, 69, 1)
-    ),
+  background-image: var(--gradient),
     url("../../Images/Bike-phone-bg2.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -38,13 +33,8 @@
 }
 @media screen and (min-width: 900px) {
   .services__container {
-  /* background-color: black; */
-  background-image: linear-gradient(
-      rgba(0, 30, 69, 1),
-      rgba(0, 30, 69, 0.7),
-      rgba(0, 30, 69, 0.7),
-      rgba(0, 30, 69, 1)
-    ),
-    url("../../Images/Bike-bg4.jpeg");
-}
+    /* background-color: black; */
+    background-image: var(--gradient),
+      url("../../Images/Bike-bg4.jpeg");
+  }
 }
