--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 .Contact__container {
-  background-color: rgb(0, 30, 69);
+  background-color: var(--bgAccent);
   color: white;
   display: flex;
   align-items:flex-start;
